@@ -1,4 +1,4 @@
-#' Merge Risoe.BINfileData objects or Risoe BIN-files
+  #' Merge Risoe.BINfileData objects or Risoe BIN-files
 #'
 #' Function allows merging Risoe BIN/BINX files or Risoe.BINfileData objects.
 #'
@@ -56,7 +56,7 @@
 #' @note The validity of the output objects is not further checked.
 #'
 #'
-#' @section Function version: 0.2.3
+#' @section Function version: 0.2.4
 #'
 #'
 #' @author Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne
@@ -162,7 +162,7 @@ merge_Risoe.BINfileData <- function(
 
   }
 
-  # Get POSITION vales -------------------------------------------------------
+  # Get POSITION values -------------------------------------------------------
 
   ##grep maximum position value from the first file
   temp.position.max <- max(temp[[1]]@METADATA[, "POSITION"])
@@ -174,15 +174,15 @@ merge_Risoe.BINfileData <- function(
       temp.position.max +
       position.number.append.gap
 
-    temp.position.max <- max(temp)
+    temp.position.max <<- max(temp)
 
     return(temp)
   }))
 
   temp.position.values <- c(temp[[1]]@METADATA[, "POSITION"], temp.position.values)
 
-  # Get overall record length -----------------------------------------------
 
+  # Get overall record length -----------------------------------------------
   temp.record.length <- sum(sapply(1:length(temp), function(x){
 
     length(temp[[x]]@METADATA[,"ID"])
