@@ -870,9 +870,9 @@
 </td>
 <td class=cellinside>0.1.0
 </td>
-<td class=cellinside>2015-10-01
+<td class=cellinside>2015-10-02
 </td>
-<td class=cellinside>18:57:59
+<td class=cellinside>19:04:55
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
@@ -925,11 +925,11 @@
 </td>
 <td class=cellinside><br /> Function allows merging Risoe BIN/BINX files or Risoe.BINfileData objects.<br />
 </td>
-<td class=cellinside>0.2.3
+<td class=cellinside>0.2.4
 </td>
-<td class=cellinside>2015-09-22
+<td class=cellinside>2015-10-03
 </td>
-<td class=cellinside>09:41:30
+<td class=cellinside>15:05:08
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
@@ -1060,9 +1060,9 @@
 </td>
 <td class=cellinside>1.7.3
 </td>
-<td class=cellinside>2015-09-25
+<td class=cellinside>2015-10-02
 </td>
-<td class=cellinside>15:29:03
+<td class=cellinside>19:04:55
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France),   Michael Dietze, GFZ Potsdam (Germany)<br />  R Luminescence Package Team
@@ -1287,9 +1287,9 @@
 </td>
 <td class=cellinside>0.1.0
 </td>
-<td class=cellinside>2015-09-30
+<td class=cellinside>2015-10-02
 </td>
-<td class=cellinside>15:16:28
+<td class=cellinside>19:04:55
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)<br />  R Luminescence Package Team
@@ -1308,7 +1308,7 @@
 </td>
 <td class=cellinside>2015-10-02
 </td>
-<td class=cellinside>17:42:21
+<td class=cellinside>19:04:55
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France), Margret C. Fuchs, TU Bergakademie Freiberg (Germany)<br />  R Luminescence Package Team
@@ -1567,7 +1567,7 @@
 </td>
 <td class=cellinside>2015-10-02
 </td>
-<td class=cellinside>00:38:50
+<td class=cellinside>19:04:55
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France),  Michael Dietze, GFZ Potsdam (Germany),  Margret C. Fuchs, HZDR,<br /> Helmholtz-Institute Freiberg for Resource Technology<br /> (Germany)<br />  R Luminescence Package Team
