@@ -1,5 +1,5 @@
 % latex table generated in R 3.2.2 by xtable 1.7-4 package
-% Fri Oct  2 17:45:44 2015
+% Sat Oct  3 15:11:04 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -82,13 +82,13 @@
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   43 & get\_rightAnswer & Function to get the right answer & $<$br /$>$ This function returns just the right answer$<$br /$>$ & 0.1.0 & 2015-09-24 & 16:32:32
  & $<$br /$>$ inspired by R.G.$<$br /$>$  R Luminescence Package Team \\ 
-  44 & get\_Risoe.BINfileData & General accessor function for RLum S4 class objects & $<$br /$>$ Function calls object-specific get functions for RisoeBINfileData S4 class objects.$<$br /$>$ & 0.1.0 & 2015-10-01 & 18:57:59
+  44 & get\_Risoe.BINfileData & General accessor function for RLum S4 class objects & $<$br /$>$ Function calls object-specific get functions for RisoeBINfileData S4 class objects.$<$br /$>$ & 0.1.0 & 2015-10-02 & 19:04:55
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   45 & get\_RLum & General accessor function for RLum S4 class objects & $<$br /$>$ Function calls object-specific get functions for RLum S4 class objects.$<$br /$>$ & 0.2.0 & 2015-09-22 & 09:41:30
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   46 & length\_RLum & General accessor function for RLum S4 class objects & $<$br /$>$ Function calls object-specific get functions for RLum S4 class objects.$<$br /$>$ & 0.1 & 2015-09-22 & 09:41:30
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  47 & merge\_Risoe.BINfileData & Merge Risoe.BINfileData objects or Risoe BIN-files & $<$br /$>$ Function allows merging Risoe BIN/BINX files or Risoe.BINfileData objects.$<$br /$>$ & 0.2.3 & 2015-09-22 & 09:41:30
+  47 & merge\_Risoe.BINfileData & Merge Risoe.BINfileData objects or Risoe BIN-files & $<$br /$>$ Function allows merging Risoe BIN/BINX files or Risoe.BINfileData objects.$<$br /$>$ & 0.2.4 & 2015-10-03 & 15:05:08
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   48 & merge\_RLum.Analysis & Merge function for RLum.Analysis S4 class objects & $<$br /$>$ Function allows merging of RLum.Analysis objects and adding of allowed$<$br /$>$ objects to an RLum.Analysis.$<$br /$>$ & 0.1 & 2015-09-22 & 09:41:30
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
@@ -102,7 +102,7 @@
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany),  Sebastian Kreutzer,$<$br /$>$ IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)  Inspired by a plot$<$br /$>$ introduced by Galbraith \& Green (1990)$<$br /$>$  R Luminescence Package Team \\ 
   53 & plot\_DRTResults & Visualise dose recovery test results & $<$br /$>$ The function provides a standardised plot output for dose recovery test$<$br /$>$ measurements.$<$br /$>$ & 0.1.8 & 2015-09-22 & 09:41:30
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
-  54 & plot\_GrowthCurve & Fit and plot a growth curve for luminescence data (Lx/Tx against dose) & $<$br /$>$ A dose response curve is produced for luminescence measurements using a$<$br /$>$ regenerative protocol.$<$br /$>$ & 1.7.3 & 2015-09-25 & 15:29:03
+  54 & plot\_GrowthCurve & Fit and plot a growth curve for luminescence data (Lx/Tx against dose) & $<$br /$>$ A dose response curve is produced for luminescence measurements using a$<$br /$>$ regenerative protocol.$<$br /$>$ & 1.7.3 & 2015-10-02 & 19:04:55
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France),   Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   55 & plot\_Histogram & Plot a histogram with separate error plot & $<$br /$>$ Function plots a predefined histogram with an accompanying error plot as$<$br /$>$ suggested by Rex Galbraith at the UK LED in Oxford 2010.$<$br /$>$ & 0.4.4 & 2015-09-22 & 09:41:30
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany),   Sebastian Kreutzer,$<$br /$>$ IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
@@ -125,9 +125,9 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   65 & plot\_RLum.Results & Plot function for an RLum.Results S4 class object & $<$br /$>$ The function provides a standardised plot output for data of an RLum.Results$<$br /$>$ S4 class object$<$br /$>$ & 0.2.0 & 2015-09-22 & 09:41:30
  & $<$br /$>$ Christoph Burow, University of Cologne (Germany), Sebastian Kreutzer, IRAMAT-CRP2A,$<$br /$>$ Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
-  66 & plot\_ViolinPlot & Create a violin plot & $<$br /$>$ Draws a kernal densiy plot in combination with a boxplot in its middle. The shape of the violin$<$br /$>$ is constructed using a mirrored density curve. This plot is especially designed for cases$<$br /$>$ where the individual errors are zero or to small to be visualised. The idea for this plot is$<$br /$>$ based on the the 'volcano plot' in the ggplot2 package by Hadely Wickham and Winston Chang.$<$br /$>$ The general idea for the Violin Plot seems to be introduced by Hintze and Nelson (1998).$<$br /$>$ & 0.1.0 & 2015-09-30 & 15:16:28
+  66 & plot\_ViolinPlot & Create a violin plot & $<$br /$>$ Draws a kernal densiy plot in combination with a boxplot in its middle. The shape of the violin$<$br /$>$ is constructed using a mirrored density curve. This plot is especially designed for cases$<$br /$>$ where the individual errors are zero or to small to be visualised. The idea for this plot is$<$br /$>$ based on the the 'volcano plot' in the ggplot2 package by Hadely Wickham and Winston Chang.$<$br /$>$ The general idea for the Violin Plot seems to be introduced by Hintze and Nelson (1998).$<$br /$>$ & 0.1.0 & 2015-10-02 & 19:04:55
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
-  67 & read\_BIN2R & Import Risoe BIN-file into R & $<$br /$>$ Import a *.bin or a *.binx file produced by a Risoe DA15 and DA20 TL/OSL$<$br /$>$ reader into R.$<$br /$>$ & 0.9.2 & 2015-10-02 & 17:42:21
+  67 & read\_BIN2R & Import Risoe BIN-file into R & $<$br /$>$ Import a *.bin or a *.binx file produced by a Risoe DA15 and DA20 TL/OSL$<$br /$>$ reader into R.$<$br /$>$ & 0.9.2 & 2015-10-02 & 19:04:55
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Margret C. Fuchs, TU Bergakademie Freiberg (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   68 & read\_Daybreak2R & Import Daybreak ASCII dato into R & $<$br /$>$ Import a *.txt (ASCII) file produced by a Daybreak reader into R.$<$br /$>$ & 0.1.0 & 2015-09-22 & 09:41:30
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)  Based on suggestion by Willian Amidon and Andrew Louis Gorin.$<$br /$>$  R Luminescence Package Team \\ 
@@ -148,7 +148,7 @@
   78 & RLum.Data.Image-class & Class  "RLum.Data.Image" & $<$br /$>$ Class for luminescence image data (TL/OSL/RF).$<$br /$>$ &  &  &  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$ \\ 
   79 & RLum.Data.Spectrum-class & Class  "RLum.Data.Spectrum" & $<$br /$>$ Class for luminescence spectra data (TL/OSL/RF).$<$br /$>$ &  &  &  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$ \\ 
   80 & RLum.Results-class & Class  "RLum.Results" & $<$br /$>$ Object class contains results data from functions.$<$br /$>$ &  &  &  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$ \\ 
-  81 & Second2Gray & Converting equivalent dose values from seconds (s) to gray (Gy) & $<$br /$>$ Conversion of absorbed radiation dose in seconds (s) to the SI unit gray$<$br /$>$ (Gy) including error propagation. Normally used for equivalent dose data.$<$br /$>$ & 0.6.0 & 2015-10-02 & 00:38:50
+  81 & Second2Gray & Converting equivalent dose values from seconds (s) to gray (Gy) & $<$br /$>$ Conversion of absorbed radiation dose in seconds (s) to the SI unit gray$<$br /$>$ (Gy) including error propagation. Normally used for equivalent dose data.$<$br /$>$ & 0.6.0 & 2015-10-02 & 19:04:55
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France),  Michael Dietze, GFZ Potsdam (Germany),  Margret C. Fuchs, HZDR,$<$br /$>$ Helmholtz-Institute Freiberg for Resource Technology$<$br /$>$ (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   82 & set\_Risoe.BINfileData & General accessor function for RLum S4 class objects & $<$br /$>$ Function calls object-specific get functions for RisoeBINfileData S4 class objects.$<$br /$>$ & 0.1 & 2015-09-22 & 09:41:30
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
