@@ -63,7 +63,7 @@ With no additional summand the new position numbers would be:
 The validity of the output objects is not further checked.
 }
 \section{Function version}{
- 0.2.3 (2015-09-22 09:41:30)
+ 0.2.4 (2015-10-03 15:05:08)
 }
 \examples{
 ##merge two objects
