@@ -53,7 +53,7 @@ two other R packages exist providing a possibility to produces this kind of plot
 'vioplot' and 'violinmplot' (see References for details).
 }
 \section{Function version}{
- 0.1.0 (2015-09-30 15:16:28)
+ 0.1.0 (2015-10-02 19:04:55)
 }
 \examples{
 ## read example data set
