@@ -159,6 +159,13 @@ Changes in version 0.5.0 (, 2015):
              • The function now removes empty list objects before
                proceeding.
 
+         • ‘merge_RisoeBINfileData()’
+
+             • The position number of the merged BIN-files was not
+               appropriately recalculated due to a coding error (#251).
+               Report and fix was gratefully provided by Alice
+               Versandaal.
+
          • ‘plot_AbanicoPlot()’
 
              • Further adjustment to deal with zero values (will now be
